# react-native-xxhash

./: .gitignore  .npmignore  CONTRIBUTING.md  README.md  package.json  react-native-xxhash.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/xxhash/: XxhashModule.kt  XxhashPackage.kt
cpp/: react-native-xxhash.cpp  react-native-xxhash.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/xxhash/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/XxhashExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/XxhashExample.xcodeproj/: project.pbxproj
example/ios/XxhashExample.xcodeproj/xcshareddata/xcschemes/: XxhashExample.xcscheme
example/ios/XxhashExample.xcworkspace/: contents.xcworkspacedata
example/ios/XxhashExampleTests/: XxhashExampleTests.m
example/src/: App.tsx
ios/: Xxhash.h  Xxhash.mm
src/: index.tsx
